// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html without reported errors html attribute (missing quote) 1`] = `
Object {
  "actual": "<img attr=\\"1\\" xmlns=\\"http://www.w3.org/1999/xhtml\\"/>",
  "errors": Array [
    Array [
      "warning",
      "attribute \\"1\\" missed quot(\\")!",
      Object {
        "columnNumber": 11,
        "lineNumber": 1,
      },
    ],
  ],
}
`;

exports[`html without reported errors text/html attribute (missing =) 1`] = `
Object {
  "actual": "<scxml xmlns=\\"http://www.w3.org/2005/07/scxml\\" version=\\"1.0\\" profile=\\"ecmascript\\" id=\\"scxmlRoot\\" initial=\\"start\\">

  <!--
      some comment (next line is empty)

  -->

  <state id=\\"start\\" name=\\"start\\">
    <transition event=\\"init\\" name=\\"init\\" target=\\"main_state\\"></transition>
  </state>

  </scxml>",
  "errors": Array [
    Array [
      "warning",
      "attribute value must after \\"=\\"",
      Object {
        "columnNumber": 11,
        "lineNumber": 11,
      },
    ],
  ],
}
`;

exports[`html without reported errors text/xml attribute (missing =) 1`] = `
Object {
  "actual": "<scxml xmlns=\\"http://www.w3.org/2005/07/scxml\\" version=\\"1.0\\" profile=\\"ecmascript\\" id=\\"scxmlRoot\\" initial=\\"start\\">

  <!--
      some comment (next line is empty)

  -->

  <state id=\\"start\\" name=\\"start\\">
    <transition event=\\"init\\" name=\\"init\\" target=\\"main_state\\"/>
  </state>

  </scxml>",
  "errors": Array [
    Array [
      "warning",
      "attribute value must after \\"=\\"",
      Object {
        "columnNumber": 11,
        "lineNumber": 11,
      },
    ],
  ],
}
`;

exports[`html without reported errors unclosed document 1`] = `
Object {
  "actual": "<img xmlns=\\"http://www.w3.org/1999/xhtml\\"/>",
}
`;
